watershed-kernel/tests/compile_fail/merge_done_rejects_optional_error.rs
use watershed_distributary::dag::TaskMergeDone;

fn main() {
    let _event = TaskMergeDone {
        task_slug: "task".to_owned(),
        error: None,
    };
}
